# RL-LLM-AutoTrainer

./: .gitignore  2025-11-19-you-are-tasked-with-making-an-integration-plan-to.txt  BRANCH-STATE.md  OPENTUI-MIRGATION.md  README.md  SETUP.md  install_bnb_and_run.sh  install_deps_and_run.sh  pyproject.toml  run_finetune_and_dpo_selection.py  run_vblora_pipeline.py  test_dpo_metrics.py
finetuning/: README.md  __init__.py  cli.py  requirements.txt  setup.cmd  subset_data.csv
finetuning/config/: __init__.py  base_config.py
finetuning/core/: data_processor.py
finetuning/orpo/: README.md  cli.py  train_orpo.py
finetuning/training/: metrics.py  trainer.py
finetuning/utils/: helpers.py  merge_adapter.py  orpo_generator.py
finetuning_vblora/: cli.py  data.csv  finetuning.py  pyproject.toml  requirements.txt
finetuning_vblora/config/: base_config.py  model_variants.py  vblora_config.py
finetuning_vblora/core/: tokenizer_manager.py
finetuning_vblora/training/: callbacks.py  metrics.py  trainer.py
prototyping/: README.md  data-gen.py  interactive-data-gen.py  requirements.txt  setup.ps1  setup.sh  tool-call-config.py
prototyping/cli-wrapper/: README.md  install.sh  package-lock.json  package.json  test.sh  tsconfig.json
prototyping/finetuning/: README.md  __init__.py  cli.py  config.py  demo_epoch_metrics.py  demo_interactive.py  finetuning.py  interactive_finetuning.py  pipeline_example.py  realistic_test_data.csv  requirements.txt  setup.sh  test.py  test_data.csv  test_epoch_metrics.py  test_metrics_data.csv  usage_guide.py
prototyping/modeling/: peft.py  (+4 more)
(+114 files in other folders)
